--- a/index.html
+++ b/index.html
@@ -87,5 +87,19 @@
         ><div class="scroll__icon click"></div
       ></a>
     </section>
+    <section>
+      <div id="projects">
+        <div class="container">
+          <div class="row">
+            <h1 class="section__title">
+              Here are some of my <span class="yellow">projects</span>
+            </h1>
+            <ul class="project__list">
+              <li class="project"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
