feat: added sample project img and description

--- a/index.html
+++ b/index.html
@@ -95,7 +95,36 @@
               Here are some of my <span class="yellow">projects</span>
             </h1>
             <ul class="project__list">
-              <li class="project"></li>
+              <li class="project">
+                <div class="project__wrapper">
+                  <img
+                    src="./assets/blinker mockup.png"
+                    class="project__img"
+                    alt=""
+                  />
+                  <div class="project__description">
+                    <h3 class="project__description--title">
+                      My First Projects
+                    </h3>
+                    <h4 class="project__description--sub-title">
+                      Html, CSS, JavaScript, Vue, Vuex
+                    </h4>
+                    <p class="project__description--para">
+                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
+                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
+                      Lorem ipsum dolor sit amet,
+                    </p>
+                    <div class="project__description--links">
+                      <a href="#" class="project__description--link"
+                        ><i class="fab fa-github"></i
+                      ></a>
+                      <a href="#" class="project__description--link"
+                        ><i class="fas fa-link"></i
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
