--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     class="project__img"
                     alt=""
                   />
+                  <div class="project__wrapper--bg"></div>
                   <div class="project__description">
                     <h3 class="project__description--title">
                       My First Projects
