feat: added footer

--- a/index.html
+++ b/index.html
@@ -193,5 +193,33 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <figure><img src="./assets/footer-logo.png" alt="" /></figure>
+        <div class="footer__social--list">
+          <a
+            href="#"
+            class="footer__social--link liver__hover-effect liver__hover-efect--white"
+            >Github</a
+          >
+          <a
+            href="#"
+            class="footer__social--link liver__hover-effect liver__hover-efect--white"
+            >LinkedIn</a
+          >
+          <a
+            href="#"
+            class="footer__social--link liver__hover-effect liver__hover-efect--white"
+            >Contact</a
+          >
+          <a
+            href="#"
+            class="footer__social--link liver__hover-effect liver__hover-efect--white"
+            >Resume</a
+          >
+        </div>
+        <div class="footer__copyright">Copyright © Himchan Bae</div>
+      </div>
+    </footer>
   </body>
 </html>
