style: added footer styling

--- a/index.html
+++ b/index.html
@@ -195,30 +195,38 @@
     </section>
     <footer>
       <div class="container">
-        <figure><img src="./assets/footer-logo.png" alt="" /></figure>
-        <div class="footer__social--list">
-          <a
-            href="#"
-            class="footer__social--link liver__hover-effect liver__hover-efect--white"
-            >Github</a
-          >
-          <a
-            href="#"
-            class="footer__social--link liver__hover-effect liver__hover-efect--white"
-            >LinkedIn</a
-          >
-          <a
-            href="#"
-            class="footer__social--link liver__hover-effect liver__hover-efect--white"
-            >Contact</a
-          >
-          <a
-            href="#"
-            class="footer__social--link liver__hover-effect liver__hover-efect--white"
-            >Resume</a
-          >
+        <div class="row footer__row">
+          <figure>
+            <img
+              class="footer__logo--img"
+              src="./assets/footer-logo.png"
+              alt=""
+            />
+          </figure>
+          <div class="footer__social--list">
+            <a
+              href="#"
+              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              >Github</a
+            >
+            <a
+              href="#"
+              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              >LinkedIn</a
+            >
+            <a
+              href="#"
+              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              >Contact</a
+            >
+            <a
+              href="#"
+              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              >Resume</a
+            >
+          </div>
+          <div class="footer__copyright">Copyright © Himchan Bae</div>
         </div>
-        <div class="footer__copyright">Copyright © Himchan Bae</div>
       </div>
     </footer>
   </body>
