style: add hover effect to link__hover-effect

--- a/index.html
+++ b/index.html
@@ -17,33 +17,31 @@
           <img id="personal-logo" src="./assets/logo.png" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href="#"
-              class="nav__link--anchor link__hover link__hover-efect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >About</a
-            >
-          </li>
-          <li class="nav__link">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover link__hover-efect--black"
-              >Projects</a
-            >
-          </li>
-          <li class="nav__link">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover link__hover-efect--black"
-              >Contact</a
             >
           </li>
           <li class="nav__link click">
             <a
               href="#"
-              class="nav__link--anchor link__hover link__hover-efect--black"
-            ></a
-            ><i class="fas fa-adjust"></i>
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+          </li>
+          <li class="nav__link click">
+            <a
+              href="#"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Contact</a
+            >
+          </li>
+          <li class="nav__link click">
+            <a href="#" class="nav__link--anchor"
+              ><i class="fas fa-adjust"></i
+            ></a>
           </li>
         </ul>
       </nav>
@@ -206,22 +204,22 @@
           <div class="footer__social--list">
             <a
               href="#"
-              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
               >Github</a
             >
             <a
               href="#"
-              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
               >LinkedIn</a
             >
             <a
               href="#"
-              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
               >Contact</a
             >
             <a
               href="#"
-              class="footer__social--link liver__hover-effect liver__hover-efect--white"
+              class="footer__social--link link__hover-effect link__hover-effect--white"
               >Resume</a
             >
           </div>
