--- a/index.html
+++ b/index.html
@@ -84,6 +84,49 @@
       <a href="#projects" class="scroll"
         ><div class="scroll__icon click"></div
       ></a>
+      <div class="modal">
+        <div class="modal__half modal__about">
+          <h3 class="modal__title modal-title--about">
+            Here's a bit about me.
+          </h3>
+          <h4 class="modal__sub-title modal__sub-title--about"></h4>
+          <p class="modal__para">
+            I'm a 31 year-old Korean frontend software engineer<br />I am funny
+            man
+          </p>
+          <div class="modal__languages">
+            <figure>
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+            </figure>
+            <figure>
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+            </figure>
+            <figure>
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+            </figure>
+            <figure>
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+            </figure>
+          </div>
+        </div>
+        <div class="modal__half modal__contact">Let's have a chat!</div>
+      </div>
     </section>
     <section>
       <div id="projects">
