--- a/index.html
+++ b/index.html
@@ -89,39 +89,78 @@
           <h3 class="modal__title modal-title--about">
             Here's a bit about me.
           </h3>
-          <h4 class="modal__sub-title modal__sub-title--about"></h4>
+          <h4 class="modal__sub-title modal__sub-title--about">
+            Frontend Software Engineer.
+          </h4>
           <p class="modal__para">
-            I'm a 31 year-old Korean frontend software engineer<br />I am funny
-            man
+            I'm a 31 year-old Korean
+            <b class="yellow">frontend software engineer</b>.<br />I am
+            <b class="yellow">funny man</b>.
           </p>
           <div class="modal__languages">
-            <figure>
+            <figure class="modal__language">
               <img
                 class="modal__language--img"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
                 alt=""
               />
+              <span class="language__name">HTML</span>
             </figure>
-            <figure>
+            <figure class="modal__language">
               <img
                 class="modal__language--img"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
                 alt=""
               />
+              <span class="language__name">HTML</span>
             </figure>
-            <figure>
+            <figure class="modal__language">
               <img
                 class="modal__language--img"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
                 alt=""
               />
+              <span class="language__name">HTML</span>
             </figure>
-            <figure>
+            <figure class="modal__language">
               <img
                 class="modal__language--img"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
                 alt=""
               />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                alt=""
+              />
+              <span class="language__name">HTML</span>
             </figure>
           </div>
         </div>
