--- a/index.html
+++ b/index.html
@@ -164,7 +164,27 @@
             </figure>
           </div>
         </div>
-        <div class="modal__half modal__contact">Let's have a chat!</div>
+        <div class="modal__half modal__contact">
+          <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
+          <h3 class="modal__sub-title modal__sub-title--contact">
+            I'm currently open to new opportunities.
+          </h3>
+          <form id="contact__form" action="">
+            <div class="form__item">
+              <label class="form__item--label">Name</label
+              ><input class="input" type="text" name="user_name" required></input>
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Email</label
+              ><input class="input" type="email" name="user_email" required></input>
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Message</label
+              ><textarea class="input" type="text" name="message" required></textarea>
+            </div>
+            <button id="contact__submit" class="form__submit">Send it my way</button>
+          </form>
+        </div>
       </div>
     </section>
     <section>
