--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Himchan Bae</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
     <script
       src="https://kit.fontawesome.com/1e724f39fe.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({
+          publicKey: "BRzZxg-TiEgtiOBNY",
+        });
+      })();
+    </script>
   </head>
+
   <body>
     <section id="landing-page">
       <nav>
@@ -169,22 +182,31 @@
           <h3 class="modal__sub-title modal__sub-title--contact">
             I'm currently open to new opportunities.
           </h3>
-          <form id="contact__form" action="">
+          <form id="contact__form" onsubmit="contact(event)">
             <div class="form__item">
               <label class="form__item--label">Name</label
-              ><input class="input" type="text" name="user_name" required></input>
+              ><input class="input" type="text" name="user_name" />
             </div>
             <div class="form__item">
               <label class="form__item--label">Email</label
-              ><input class="input" type="email" name="user_email" required></input>
+              ><input class="input" type="email" name="user_email" />
             </div>
             <div class="form__item">
               <label class="form__item--label">Message</label
-              ><textarea class="input" type="text" name="message" required></textarea>
+              ><textarea class="input" type="text" name="message"></textarea>
             </div>
-            <button id="contact__submit" class="form__submit">Send it my way</button>
+            <button id="contact__submit" class="form__submit">
+              Send it my way
+            </button>
           </form>
+          <div class="modal__overlay modal__overlay--loading">
+            <i class="fas fa-spinner"></i>
+          </div>
+          <div class="modal__overlay modal__overlay--success">
+            Thanks for the message! Looking forward to speaking to you soon.
+          </div>
         </div>
+        <i class="fas fa-times modal__exit click"></i>
       </div>
     </section>
     <section>
