--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               >Projects</a
             >
           </li>
-          <li class="nav__link click">
+          <li class="nav__link click" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -66,7 +66,8 @@
             I'm a <b class="yellow">Frontend Software Engineer</b> with a strong
             passion for building web applications with great user experiences.
             <br />
-            Here's a bit more <b class="yellow">about me</b>.
+            Here's a bit more
+            <b class="yellow click" onclick="toggleModal()">about me</b>.
           </p>
         </div>
         <div class="social__list">
@@ -93,7 +94,9 @@
           ></a>
         </div>
       </header>
-      <button class="mail__btn click"><i class="fas fa-envelope"></i></button>
+      <button class="mail__btn click" onclick="toggleModal()">
+        <i class="fas fa-envelope"></i>
+      </button>
       <a href="#projects" class="scroll"
         ><div class="scroll__icon click"></div
       ></a>
@@ -178,6 +181,7 @@
           </div>
         </div>
         <div class="modal__half modal__contact">
+          <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
           <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
           <h3 class="modal__sub-title modal__sub-title--contact">
             I'm currently open to new opportunities.
@@ -203,10 +207,10 @@
             <i class="fas fa-spinner"></i>
           </div>
           <div class="modal__overlay modal__overlay--success">
-            Thanks for the message! Looking forward to speaking to you soon.
+            Thanks for the message! <br />Looking forward to speaking to you
+            soon.
           </div>
         </div>
-        <i class="fas fa-times modal__exit click"></i>
       </div>
     </section>
     <section>
