--- a/index.html
+++ b/index.html
@@ -25,39 +25,41 @@
 
   <body>
     <section id="landing-page" onmousemove="moveBackground(event)">
-      <nav>
-        <figure>
-          <img id="personal-logo" src="./assets/logo.png" alt="" />
-        </figure>
-        <ul class="nav__link--list">
-          <li class="nav__link click">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >About</a
-            >
-          </li>
-          <li class="nav__link click">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Projects</a
-            >
-          </li>
-          <li class="nav__link click" onclick="toggleModal()">
-            <a
-              href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Contact</a
-            >
-          </li>
-          <li class="nav__link click" onclick="toggleContrast()">
-            <a href="#" class="nav__link--anchor"
-              ><i class="fas fa-adjust"></i
-            ></a>
-          </li>
-        </ul>
-      </nav>
+      <div class="nav__background">
+        <nav>
+          <figure>
+            <img id="personal-logo" src="./assets/logo.png" alt="" />
+          </figure>
+          <ul class="nav__link--list">
+            <li class="nav__link click" onclick="toggleModal()">
+              <a
+                href="#"
+                class="nav__link--anchor link__hover-effect link__hover-effect--black"
+                >About</a
+              >
+            </li>
+            <li class="nav__link click">
+              <a
+                href="#"
+                class="nav__link--anchor link__hover-effect link__hover-effect--black"
+                >Projects</a
+              >
+            </li>
+            <li class="nav__link click" onclick="toggleModal()">
+              <a
+                href="#"
+                class="nav__link--anchor link__hover-effect link__hover-effect--black"
+                >Contact</a
+              >
+            </li>
+            <li class="nav__link click" onclick="toggleContrast()">
+              <a href="#" class="nav__link--anchor"
+                ><i class="fas fa-adjust"></i
+              ></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <header class="header">
         <div class="header__content">
           <h1 class="title">Hey</h1>
