--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
             <li class="nav__link click">
               <a
-                href="#"
+                href="#projects"
                 class="nav__link--anchor link__hover-effect link__hover-effect--black"
                 >Projects</a
               >
@@ -100,12 +100,11 @@
           ></a>
         </div>
       </header>
-      <button class="mail__btn click" onclick="toggleModal()">
-        <i class="fas fa-envelope"></i>
-      </button>
-      <a href="#projects" class="scroll"
-        ><div class="scroll__icon click"></div
+      <a href="#"
+        ><button class="mail__btn click" onclick="toggleModal()">
+          <i class="fas fa-envelope"></i></button
       ></a>
+      <a href="#projects" class="scroll"><div class="scroll__icon"></div></a>
       <div class="modal">
         <div class="modal__half modal__about">
           <h3 class="modal__title modal-title--about">
@@ -361,11 +360,13 @@
             >
             <a
               href="#"
+              onclick="toggleModal()"
               class="footer__social--link link__hover-effect link__hover-effect--white"
               >Contact</a
             >
             <a
-              href="#"
+              href="./assets/David Bragg Resume.pdf"
+              target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
               >Resume</a
             >
