--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
             <li class="nav__link click">
               <a
-                href="#projects"
+                href="#web-projects"
                 class="nav__link--anchor link__hover-effect link__hover-effect--black"
                 >Projects</a
               >
@@ -115,7 +115,9 @@
         ><button class="mail__btn click" onclick="toggleModal()">
           <i class="fas fa-envelope"></i></button
       ></a>
-      <a href="#projects" class="scroll"><div class="scroll__icon"></div></a>
+      <a href="#web-projects" class="scroll"
+        ><div class="scroll__icon"></div
+      ></a>
       <div class="modal">
         <div class="modal__half modal__about">
           <h3 class="modal__title modal-title--about">More About Me</h3>
@@ -211,7 +213,7 @@
       <img src="./assets/semi circle.svg" class="shape shape--8" />
     </section>
     <section>
-      <div id="projects">
+      <div id="web-projects">
         <div class="container">
           <div class="row">
             <h1 class="section__title">
@@ -322,10 +324,13 @@
                 </div>
               </li>
             </ul>
+            <a href="#mobile-projects" class="scroll"
+              ><div class="scroll__icon"></div
+            ></a>
           </div>
         </div>
       </div>
-      <div id="projects">
+      <div id="mobile-projects">
         <div class="container">
           <div class="row">
             <h1 class="section__title">
