--- a/index.html
+++ b/index.html
@@ -223,23 +223,19 @@
               <li class="project">
                 <div class="project__wrapper">
                   <img
-                    src="./assets/blinker mockup.png"
+                    src="./assets/lantern-market.png"
                     class="project__img"
                     alt=""
                   />
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
-                    <h3 class="project__description--title">
-                      Lantern Market (App Store-like Web App)
-                    </h3>
+                    <h3 class="project__description--title">Lantern Market</h3>
                     <h4 class="project__description--sub-title">
                       HTML + Handlebars (hbs) | CSS | JavaScript (Node.js &
                       Express.js) | MongoDB (GridFSBucket)
                     </h4>
                     <p class="project__description--para">
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet,
+                      App Store-like Web Application
                     </p>
                     <div class="project__description--links">
                       <a
