feat: add detailed descriptions for Lantern Market & Medi-Connect projects

--- a/index.html
+++ b/index.html
@@ -231,26 +231,45 @@
                   <div class="project__description">
                     <h3 class="project__description--title">Lantern Market</h3>
                     <h4 class="project__description--sub-title">
-                      HTML + Handlebars (hbs) | CSS | JavaScript (Node.js &
-                      Express.js) | MongoDB (GridFSBucket)
+                      HTML (hbs) | CSS | JavaScript (Node.js & Express.js) |
+                      MongoDB
                     </h4>
                     <p class="project__description--para">
-                      App Store-like Web Application
+                      <b>"Lantern Market"</b> is my first web project, where I
+                      challenged myself with <b>full-stack development</b>.
+                      Built with
+                      <b>Node.js, Express.js, Handlebars, and MongoDB</b>, this
+                      app store-like platform allows users to register, browse,
+                      and download apps. <br />
+                      I focused on implementing
+                      <b
+                        >secure user authentication, dynamic UI rendering, and
+                        file management using GridFS</b
+                      >. <br />
+                      Through this project, I gained hands-on experience in
+                      <b
+                        >backend development, session management, and database
+                        integration</b
+                      >. It also strengthened my understanding of
+                      <b>RESTful API design and server-side rendering</b>.
                     </p>
                     <div class="project__description--links">
                       <a
-                        href="https://github.com/MQCOMP3120-2024/individual-project-HimchanBae"
+                        href="https://github.com/HimchanBae/lantern-market"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fab fa-github"></i
                       ></a>
                       <a
                         href="https://lanternmarket-himchanbae.onrender.com/"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fas fa-link"></i
                       ></a>
                       <a
                         href="https://www.figma.com/design/EPmlsGz0r1LOHBFeVnfvZU/Lantern-Market?node-id=0-1&p=f&t=VHPj9OyqTsXjZl4C-0"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fa fa-paint-brush"></i
                       ></a>
                     </div>
@@ -267,22 +286,59 @@
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
                     <h3 class="project__description--title">
-                      Medi-Connect (IBM industry project)
+                      Medi Connect <br />
+                      (IBM industry project)
                     </h3>
                     <h4 class="project__description--sub-title">
-                      Html, CSS, JavaScript, Vue, Vuex
+                      MERN (MongoDB, React.js, Express.js, Node.js) | Carbon
+                      Design System
                     </h4>
                     <p class="project__description--para">
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet,
+                      <b>Medi-Connect</b> is a web application that streamlines
+                      healthcare management. Built with the <b>MERN stack</b>,
+                      it provides a seamless <b>single-page experience</b> using
+                      <b>client-side routing</b>. Patients can book appointments
+                      and manage health records, while physicians can review
+                      patient histories and schedule consultations efficiently.
+                      <br />
+
+                      A key aspect of this project was integrating
+                      <b>IBM’s Carbon Design System</b>, which enhanced my
+                      understanding of
+                      <b>UI consistency, accessibility, and scalability</b>.
+                      Through this experience, I developed a stronger grasp of
+                      <b>full-stack development</b>, focusing on
+                      <b
+                        >secure authentication, role-based access control, and
+                        scalable system design</b
+                      >. ✨
+                      <a
+                        href="https://github.com/HimchanBae/Medi-Connect/tree/main/screenshots"
+                        class="project__description--link mediconnect-link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                      >
+                        View detailed feature overview (GIF)
+                      </a>
+                      ✨
                     </p>
                     <div class="project__description--links">
-                      <a href="#" class="project__description--link"
+                      <a
+                        href="https://github.com/HimchanBae/Medi-Connect"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fab fa-github"></i
                       ></a>
-                      <a href="#" class="project__description--link"
+                      <a
+                        href="https://mediconnect-f4mm.onrender.com/"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fas fa-link"></i
+                      ></a>
+                      <a
+                        href="https://www.figma.com/design/NA8W1W2wOhZyD3kcn5xtrZ/Medi-Connect?node-id=11225-3094&t=zEeYGc8I9QavGDKo-1"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fa fa-paint-brush"></i
                       ></a>
                     </div>
                   </div>
@@ -309,10 +365,16 @@
                       Lorem ipsum dolor sit amet,
                     </p>
                     <div class="project__description--links">
-                      <a href="#" class="project__description--link"
+                      <a
+                        href="https://github.com/HimchanBae/HimchanBae.github.io"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fab fa-github"></i
                       ></a>
-                      <a href="#" class="project__description--link"
+                      <a
+                        href="https://himchanbae.github.io/"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
                         ><i class="fas fa-link"></i
                       ></a>
                     </div>
