feat: improve modal styling & add close on outside click

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             I specialize in <b class="yellow">frontend web development</b>,
             crafting high-performance and engaging user experiences. With a
             strong foundation in <b class="yellow">full-stack development</b>, I
-            build seamless and scalable applications that bridge frontend and
-            backend technologies. <br /><br />
+            am also proficient in building seamless and scalable applications
+            that bridge frontend and backend technologies <br /><br />
             My expertise extends to
             <b class="yellow">web and mobile app development</b>, enabling me to
             deliver innovative solutions while continuously enhancing my skills.
@@ -171,11 +171,15 @@
           </div>
         </div>
         <div class="modal__half modal__contact">
-          <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
+          <i class="fas fa-times modal__exit click" onclick="closeModal()"></i>
           <h3 class="modal__title modal__title--contact">Let's have a chat!</h3>
           <h3 class="modal__sub-title modal__sub-title--contact">
-            I'm currently open to new opportunities. <br />
+            I'm currently open to new opportunities. <br /><br />
           </h3>
+          <p class="modal__para modal__para--contact">
+            Whether it's a new role, a collaboration, or an exciting project,
+            feel free to reach out!<br />
+          </p>
           <form id="contact__form" onsubmit="contact(event)">
             <div class="form__item">
               <label class="form__item--label">Name</label
