style: update project images and descriptions

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
                     <h3 class="project__description--title">Lantern Market</h3>
                     <h4 class="project__description--sub-title">
                       HTML (hbs) | CSS | JavaScript (Node.js & Express.js) |
-                      MongoDB
+                      MongoDB | Figma
                     </h4>
                     <p class="project__description--para">
-                      <b>"Lantern Market"</b> is my first web project, where I
+                      <b>Lantern Market</b> is my first web project, where I
                       challenged myself with <b>full-stack development</b>.
                       Built with
                       <b>Node.js, Express.js, Handlebars, and MongoDB</b>, this
@@ -249,7 +249,7 @@
                       <b
                         >secure user authentication, dynamic UI rendering, and
                         file management using GridFS</b
-                      >. <br />
+                      >. <br /><br />
                       Through this project, I gained hands-on experience in
                       <b
                         >backend development, session management, and database
@@ -259,22 +259,22 @@
                     </p>
                     <div class="project__description--links">
                       <a
+                        href="https://lanternmarket-himchanbae.onrender.com/"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fas fa-globe"></i
+                      ></a>
+                      <a
                         href="https://github.com/HimchanBae/lantern-market"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
                         target="_blank"
                         ><i class="fab fa-github"></i
                       ></a>
                       <a
-                        href="https://lanternmarket-himchanbae.onrender.com/"
-                        class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        target="_blank"
-                        ><i class="fas fa-link"></i
-                      ></a>
-                      <a
                         href="https://www.figma.com/design/EPmlsGz0r1LOHBFeVnfvZU/Lantern-Market?node-id=0-1&p=f&t=VHPj9OyqTsXjZl4C-0"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
                         target="_blank"
-                        ><i class="fa fa-paint-brush"></i
+                        ><i class="fab fa-figma"></i
                       ></a>
                     </div>
                   </div>
@@ -283,7 +283,7 @@
               <li class="project">
                 <div class="project__wrapper">
                   <img
-                    src="./assets/blinker mockup.png"
+                    src="./assets/medi-connect.png"
                     class="project__img"
                     alt=""
                   />
@@ -295,17 +295,20 @@
                     </h3>
                     <h4 class="project__description--sub-title">
                       MERN (MongoDB, React.js, Express.js, Node.js) | Carbon
-                      Design System
+                      Design System | Figma
                     </h4>
                     <p class="project__description--para">
                       <b>Medi-Connect</b> is a web application that streamlines
-                      healthcare management. Built with the <b>MERN stack</b>,
-                      it provides a seamless <b>single-page experience</b> using
+                      healthcare management. This project was a six-month
+                      industry project with <b>IBM</b>, providing hands-on
+                      experience in a real-world enterprise development
+                      environment. Built with the <b>MERN stack</b>, it provides
+                      a seamless <b>single-page experience</b> using
                       <b>client-side routing</b>. Patients can book appointments
                       and manage health records, while physicians can review
                       patient histories and schedule consultations efficiently.
                       <br />
-
+                      <br />
                       A key aspect of this project was integrating
                       <b>IBM’s Carbon Design System</b>, which enhanced my
                       understanding of
@@ -327,59 +330,22 @@
                     </p>
                     <div class="project__description--links">
                       <a
+                        href="https://mediconnect-f4mm.onrender.com/"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fas fa-globe"></i
+                      ></a>
+                      <a
                         href="https://github.com/HimchanBae/Medi-Connect"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
                         target="_blank"
                         ><i class="fab fa-github"></i
                       ></a>
                       <a
-                        href="https://mediconnect-f4mm.onrender.com/"
-                        class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        target="_blank"
-                        ><i class="fas fa-link"></i
-                      ></a>
-                      <a
                         href="https://www.figma.com/design/NA8W1W2wOhZyD3kcn5xtrZ/Medi-Connect?node-id=11225-3094&t=zEeYGc8I9QavGDKo-1"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
                         target="_blank"
-                        ><i class="fa fa-paint-brush"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="project">
-                <div class="project__wrapper">
-                  <img
-                    src="./assets/blinker mockup.png"
-                    class="project__img"
-                    alt=""
-                  />
-                  <div class="project__wrapper--bg"></div>
-                  <div class="project__description">
-                    <h3 class="project__description--title">
-                      Personal Portfolio Web
-                    </h3>
-                    <h4 class="project__description--sub-title">
-                      Html, CSS, JavaScript, Vue, Vuex
-                    </h4>
-                    <p class="project__description--para">
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet,
-                    </p>
-                    <div class="project__description--links">
-                      <a
-                        href="https://github.com/HimchanBae/HimchanBae.github.io"
-                        class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        target="_blank"
-                        ><i class="fab fa-github"></i
-                      ></a>
-                      <a
-                        href="https://himchanbae.github.io/"
-                        class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        target="_blank"
-                        ><i class="fas fa-link"></i
+                        ><i class="fab fa-figma"></i
                       ></a>
                     </div>
                   </div>
@@ -403,37 +369,57 @@
               <li class="project">
                 <div class="project__wrapper">
                   <img
-                    src="./assets/blinker mockup.png"
+                    src="./assets/premium-fitness.png"
                     class="project__img"
                     alt=""
                   />
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
-                    <h3 class="project__description--title">Fitness</h3>
-                    <h4 class="project__description--sub-title">
-                      HTML + Handlebars (hbs) | CSS | JavaScript (Node.js &
-                      Express.js) | MongoDB (GridFSBucket)
-                    </h4>
+                    <h3 class="project__description--title">Premium Fitness</h3>
+                    <h4 class="project__description--sub-title">Figma</h4>
                     <p class="project__description--para">
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet,
+                      <b>Premium Fitness</b> was my first app design project,
+                      where I focused on
+                      <b>wireframing and prototyping</b> using <b>Figma</b> to
+                      craft an intuitive mobile application design. This
+                      experience deepened my understanding of
+                      <b>mobile UX/UI</b>, particularly in
+                      <b
+                        >workflow structuring, intuitive navigation, and
+                        optimizing user experience</b
+                      >. <br /><br />
+
+                      Additionally, I incorporated <b>error handling</b> and
+                      <b>user experience enhancements</b> through
+                      <b
+                        >visual feedback, confirmation pop-ups, and intuitive
+                        icon placement</b
+                      >. I also designed a
+                      <b
+                        >consistent back-navigation system, dynamic state
+                        indicators, and an accessible bottom navigation bar</b
+                      >
+                      to ensure a seamless user flow. <br /><br />
+
+                      Beyond UI/UX design, I studied and documented
+                      <b
+                        >epics & user stories, use cases, and
+                        functional/non-functional requirements</b
+                      >
+                      as part of <b>software requirements analysis</b>.
                     </p>
                     <div class="project__description--links">
                       <a
-                        href="https://github.com/MQCOMP3120-2024/individual-project-HimchanBae"
+                        href="https://www.figma.com/design/3ItkudKUv2AybX1eFzz1Rd/Premium-Fitness?node-id=1-3010&p=f&t=n0tOrUT2NeB3nzjZ-0"
+                        target="_blank"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        ><i class="fab fa-github"></i
+                        ><i class="fab fa-figma"></i
                       ></a>
                       <a
-                        href="https://lanternmarket-himchanbae.onrender.com/"
+                        href="./assets/pfs-documentation.pdf"
+                        target="_blank"
                         class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        ><i class="fas fa-link"></i
-                      ></a>
-                      <a
-                        href="https://www.figma.com/design/EPmlsGz0r1LOHBFeVnfvZU/Lantern-Market?node-id=0-1&p=f&t=VHPj9OyqTsXjZl4C-0"
-                        class="project__description--link link__hover-effect link__hover-effect--yellow"
-                        ><i class="fa fa-paint-brush"></i
+                        ><i class="fa fa-file-pdf"></i
                       ></a>
                     </div>
                   </div>
@@ -459,10 +445,10 @@
                     </p>
                     <div class="project__description--links">
                       <a href="#" class="project__description--link"
-                        ><i class="fab fa-github"></i
+                        ><i class="fas fa-globe"></i
                       ></a>
                       <a href="#" class="project__description--link"
-                        ><i class="fas fa-link"></i
+                        ><i class="fab fa-github"></i
                       ></a>
                     </div>
                   </div>
